# --------------------------------------------------------------------------------------
# Copyright (c) 2026 by Quobly
# --------------------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]

  name = "quobly-alloy"
  readme = "readme.md"
  requires-python = ">=3.11"
  authors = [
    { name = "Jonathan Durandau" },
  ]
  dynamic = ["version"]
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
  ]


  
dependencies = [
    "ruff",
    "mypy",
    "qiskit>2.2",
    "qiskit-aer>=0.17",
    "spin-pulse>=1.0"
  ]

[project.urls]
homepage   = "https://github.com/quobly-sw/Quobly-alloy"
repository = "https://github.com/quobly-sw/Quobly-alloy"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
  pythonpath = [
    ".",
    "src",
  ]



[tool.ruff]
  src            = ["src"]
  line-length    = 90
  extend-exclude = ["src/eviden_package/converter"]

  [tool.ruff.lint]
    select = [
      "C",
      "E",
      "F",
      "W",
      "I",
      "C90",
      "RUF",
      "D209",
      "D403",
      "D405",
      "D413",
      "FIX003",
    ]

    [tool.ruff.lint.isort]
      combine-as-imports = true

    [tool.ruff.lint.mccabe]
      max-complexity = 20

[tool.mypy]
  follow_imports  = "normal"
  strict_optional = true
  ignore_missing_imports = true

  [[tool.mypy.overrides]]
    module        = ["spin_pulse.*", "qpu.*","simulator.*"]
    ignore_errors = true
